Memory leak in DwarfFile::LineNumberProgram::run_line_number_program

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 21
    • Affects Version/s: 20
    • Component/s: hotspot
    • b12

      Direct leak of 144 byte(s) in 3 object(s) allocated from:
          #0 0x7f25b6cb89cf in __interceptor_malloc ../../../../src/libsanitizer/asan/asan_malloc_linux.cpp:69
          #1 0x7f25b32aefbf in os::malloc(unsigned long, MEMFLAGS, NativeCallStack const&) src/hotspot/share/runtime/os.cpp:654
          #2 0x7f25b0e1dd17 in AllocateHeap(unsigned long, MEMFLAGS, NativeCallStack const&, AllocFailStrategy::AllocFailEnum) src/hotspot/share/memory/allocation.cpp:42
          #3 0x7f25b0e1dd17 in AllocateHeap(unsigned long, MEMFLAGS, AllocFailStrategy::AllocFailEnum) src/hotspot/share/memory/allocation.cpp:52
          #4 0x7f25b1c2e83e in CHeapObjBase::operator new(unsigned long, MEMFLAGS, std::nothrow_t const&) src/hotspot/share/memory/allocation.hpp:202
          #5 0x7f25b1c2e83e in CHeapObj<(MEMFLAGS)9>::operator new(unsigned long, std::nothrow_t const&) src/hotspot/share/memory/allocation.hpp:251
          #6 0x7f25b1c2e83e in DwarfFile::LineNumberProgram::run_line_number_program(char*, unsigned long, int*) src/hotspot/share/utilities/elfFile.cpp:1304
          #7 0x7f25b1c3003c in DwarfFile::LineNumberProgram::find_filename_and_line_number(char*, unsigned long, int*) src/hotspot/share/utilities/elfFile.cpp:1150
          #8 0x7f25b1c3003c in DwarfFile::get_filename_and_line_number(unsigned int, char*, unsigned long, int*, bool) src/hotspot/share/utilities/elfFile.cpp:704
          #9 0x7f25b1c303dc in ElfFile::get_source_info(unsigned int, char*, unsigned long, int*, bool) src/hotspot/share/utilities/elfFile.cpp:369
          #10 0x7f25b192f5ec in ElfDecoder::get_source_info(unsigned char*, char*, unsigned long, int*, bool) src/hotspot/share/utilities/decoder_elf.cpp:90
          #11 0x7f25b192eb60 in Decoder::get_source_info(unsigned char*, char*, unsigned long, int*, bool) src/hotspot/share/utilities/decoder.cpp:121
          #12 0x7f25b3e64d0b in VMError::print_native_stack(outputStream*, frame, Thread*, bool, int, char*, int) src/hotspot/share/utilities/vmError.cpp:366
          #13 0x7f25b23c63bc in JavaThread::print_jni_stack() src/hotspot/share/runtime/javaThread.cpp:1690
          #14 0x7f25b266665c in check_pending_exception src/hotspot/share/prims/jniCheck.cpp:193
          #15 0x7f25b266665c in check_pending_exception src/hotspot/share/prims/jniCheck.cpp:188
          #16 0x7f25b266665c in functionEnter src/hotspot/share/prims/jniCheck.cpp:219
          #17 0x7f25b267088c in checked_jni_CallStaticObjectMethod src/hotspot/share/prims/jniCheck.cpp:1290
          #18 0x7f25b620265c in thread_start test/hotspot/jtreg/runtime/jni/nativeStack/libnativeStack.c:79
          #19 0x7f25b6aa7fd3 in start_thread nptl/pthread_create.c:442

            Assignee:
            David Holmes
            Reporter:
            Justin King
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: