8303068: Memory leak in DwarfFile::LineNumberProgram::run_line_number_program